deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    chart: spring-boot-app
    app: test
  name: spring-boot-app
  namespace: spring-boot-app
spec:
  replicas: 1
  selector:
    matchLabels:
      chart: spring-boot-app
      app: test
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        chart: spring-boot-app
        app: test
    spec:
      containers:
      - image: docker.io/prashantrakh20/spring-boot-app:latest
        imagePullPolicy: Always
        name: spring-boot-app
        ports:
        - containerPort: 8080
          name: port8080
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
