deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    chart: spring-boot-app
    app: test
  name: spring-boot-app
  namespace: spring-boot-app
spec:
  ports:
  - name: port8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    chart: spring-boot-app
    app: test
  type: ClusterIP
