deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    cattle.io/creator: norman
  name: test-spring-app
  namespace: spring-boot-app
spec:
  rules:
  - host: test.spring.app
    http:
      paths:
      - backend:
          service:
            name: spring-boot-app
            port:
              number: 8080
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - test.spring.app
    secretName: spring-boot-app-cert
